--- a/public/index.css
+++ b/public/index.css
@@ -13,7 +13,14 @@ header {
     align-items: center;
     height: 80px;
     border-bottom: 2px solid rgba(80, 80, 80, 0.15);
-;
+}
+
+.odd {
+    background-color: rgba(80, 80, 80, 0.5);
+}
+
+.even {
+    background-color: rgba(80, 80, 80, 0.15);
 }
 
 .wrapper {
@@ -93,6 +100,10 @@ header {
     height: 75px;
 }
 
+.possible {
+    box-shadow: inset 0 0 20px #5EC75E;
+}
+
 .rows {
     display: flex;
     flex-direction: column;
@@ -119,11 +130,7 @@ header {
 
 .target {
     transition: all 0.3s;
-    box-shadow: inset 0 0 10px #f8a100;
-}
-
-.enemy {
-    box-shadow: inset 0 0 10px #f80000;
+    box-shadow: inset 0 0 20px #f8a100;
 }
 
 .black {
@@ -171,14 +178,6 @@ header {
 .king {
     -webkit-mask-image: url("./assets/king.svg");
     mask-image: url("./assets/king.svg");
-}
-
-.odd {
-    background-color: rgba(80, 80, 80, 0.5);
-}
-
-.even {
-    background-color: rgba(80, 80, 80, 0.15);
 }
 
 .new_player {
