[FE] Add invalid move animation

--- a/public/index.css
+++ b/public/index.css
@@ -150,6 +150,10 @@ header {
     border-bottom: 3px solid #282828;
 }
 
+.invalid_move {
+    animation: horizontal-shaking 0.25s;
+}
+
 .pawn {
     -webkit-mask-image: url("./assets/pawn.svg");
     mask-image: url("./assets/pawn.svg");
@@ -214,4 +218,12 @@ header {
     width: 15px;
     justify-content: center;
     align-items: center;
+}
+
+@keyframes horizontal-shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
 }
